<RelativeLayout android:paddingLeft="@dimen/common_layout_margin_left_normal"
    android:paddingTop="@dimen/common_layout_margin_top_small"
    android:paddingRight="@dimen/common_layout_margin_right_normal"
    android:paddingBottom="@dimen/common_layout_margin_bottom_small"
    android:layout_width="fill_parent" android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:paddingTop="@dimen/common_item_margin_normal" android:layout_width="fill_parent" android:layout_height="fill_parent" >
        <ImageView android:background="@color/common_item_layout_border" android:layout_width="fill_parent" android:layout_height="1.0dip" />
        <LinearLayout android:orientation="vertical" android:background="@color/white" android:paddingLeft="@dimen/common_item_margin_normal"
            android:paddingTop="@dimen/common_layout_margin_top_tiny" android:paddingRight="@dimen/common_item_margin_normal"
            android:paddingBottom="@dimen/common_layout_margin_bottom_small" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TableLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TableRow android:id="@+id/tableRow1" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <TextView android:gravity="center_vertical" android:id="@+id/userNameTitle" android:layout_width="wrap_content" android:layout_height="fill_parent"
                        android:text="@string/account_title" style="@style/CommonMidFont" />
                    <LinearLayout android:orientation="vertical" android:id="@+id/userNameLayout" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/common_item_margin_normal" android:layout_weight="1.0">
                        <EditText android:id="@+id/userNameText" android:layout_width="match_parent" android:layout_height="@dimen/common_edit_height" android:maxLength="31" style="@style/CommonEditTextAppearance" />
                    </LinearLayout>
                </TableRow>
                <TableRow android:id="@+id/tableRow2" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <TextView android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" style="@style/ErrorIndicatorSmallFont" />
                    <TextView android:gravity="right" android:layout_gravity="right" android:id="@+id/nameErrorTextView" android:visibility="gone" android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:text="@string/user_name_input_error_empty" android:layout_weight="1.0" style="@style/ErrorIndicatorSmallFont" />
                </TableRow>
                <TableRow android:id="@+id/tableRow3" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/common_item_margin_small">
                    <TextView android:gravity="center_vertical" android:id="@+id/passwordTitle" android:layout_width="wrap_content" android:layout_height="fill_parent"
                        android:text="@string/password_title" style="@style/CommonMidFont" />
                    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/common_item_margin_normal" android:layout_weight="1.0">
                        <LinearLayout android:orientation="horizontal" android:id="@+id/pwdLayout" android:background="@drawable/common_edit_bg_normal" android:layout_width="fill_parent" android:layout_height="@dimen/common_edit_height">
                            <EditText android:id="@+id/passWordText" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0" style="@style/CommonEditTextPwdAppearance" />
                            <ImageView android:background="@color/color_gray_low" android:layout_width="1.0dip" android:layout_height="fill_parent" android:layout_weight="0.0" />
                            <CheckBox android:id="@+id/pwdCheckbox" android:layout_width="wrap_content" android:layout_height="wrap_content" android:button="@drawable/common_edit_eye_selector"
                                android:layout_weight="0.0" style="@style/CommonEditTextPwdIconEyeAppearance" />
                        </LinearLayout>
                    </LinearLayout>
                </TableRow>
                <TableRow android:id="@+id/tableRow4" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <TextView android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="TextView" android:layout_weight="0.0" style="@style/ErrorIndicatorSmallFont" />
                    <TextView android:gravity="right" android:layout_gravity="right" android:id="@+id/passwordErrorTextView" android:visibility="gone"
                        android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/pwd_input_error_empty" android:layout_weight="1.0" style="@style/ErrorIndicatorSmallFont" />
                </TableRow>
            </TableLayout>
            <RelativeLayout android:id="@+id/btnLayout" android:layout_width="fill_parent" android:layout_height="@dimen/common_btn_height" android:layout_marginTop="@dimen/common_item_margin_big" style="@style/CommonBtnAppearance">
                <Button android:id="@+id/loginBtn" android:background="@drawable/common_btn_blue_selector" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/login"
                    android:layout_centerInParent="true" style="@style/CommonBtnAppearance" />
                <TextView android:id="@+id/btnText" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="  " android:layout_centerInParent="true" style="@style/CommonBtnTextAppearance" />
                <ProgressBar android:id="@+id/btnProgress" android:visibility="gone" android:layout_width="@dimen/common_progress_loading_height" android:layout_height="@dimen/common_progress_loading_height" android:layout_marginRight="@dimen/common_item_margin_small"
                    android:indeterminateDrawable="@drawable/startup_login_progressbar_drawable" android:indeterminateDuration="1500" android:layout_toLeftOf="@id/btnText" android:layout_centerVertical="true" />
            </RelativeLayout>
            <LinearLayout android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
                <RelativeLayout android:id="@+id/btnLayout1" android:layout_width="0dp" android:layout_weight="1" android:layout_height="@dimen/common_btn_height" android:layout_marginTop="@dimen/common_item_margin_big" style="@style/CommonBtnAppearance">
                    <Button android:id="@+id/setBtn" android:background="@drawable/common_btn_blue_selector" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="设置"
                        android:layout_centerInParent="true" style="@style/CommonBtnAppearance" />
                    <TextView android:id="@+id/setText" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="  " android:layout_centerInParent="true" style="@style/CommonBtnTextAppearance" />
                    <ProgressBar android:id="@+id/setBtnProgress" android:visibility="gone" android:layout_width="@dimen/common_progress_loading_height" android:layout_height="@dimen/common_progress_loading_height" android:layout_marginRight="@dimen/common_item_margin_small"
                        android:indeterminateDrawable="@drawable/startup_login_progressbar_drawable" android:indeterminateDuration="1500" android:layout_toLeftOf="@id/setText" android:layout_centerVertical="true" />
                </RelativeLayout>
                <RelativeLayout android:layout_marginLeft="10dp" android:id="@+id/btnLayout2" android:layout_width="0dp" android:layout_weight="1"  android:layout_height="@dimen/common_btn_height" android:layout_marginTop="@dimen/common_item_margin_big" style="@style/CommonBtnAppearance">
                    <Button android:id="@+id/regBtn" android:background="@drawable/common_btn_blue_selector" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="注册"
                        android:layout_centerInParent="true" style="@style/CommonBtnAppearance" />
                    <TextView android:id="@+id/regText" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="  " android:layout_centerInParent="true" style="@style/CommonBtnTextAppearance" />
                    <ProgressBar android:id="@+id/regBtnProgress" android:visibility="gone" android:layout_width="@dimen/common_progress_loading_height" android:layout_height="@dimen/common_progress_loading_height" android:layout_marginRight="@dimen/common_item_margin_small"
                        android:indeterminateDrawable="@drawable/startup_login_progressbar_drawable" android:indeterminateDuration="1500" android:layout_toLeftOf="@id/regText" android:layout_centerVertical="true" />
                </RelativeLayout>
            </LinearLayout>

        </LinearLayout>
        <ImageView android:background="@color/common_item_layout_border" android:layout_width="fill_parent" android:layout_height="1.0dip" />
    </LinearLayout>
</RelativeLayout>